--- a/index.css
+++ b/index.css
@@ -10,11 +10,16 @@ header{
     background-color: #2189d8;
     position: fixed;
     width: 100%;
+    z-index: 100;
 }
-header a{
+header nav a{
     color: white;
     text-decoration: none;
     transition: all 0.3s ease;
+}
+header .logoBox a{
+    color: white;
+    text-decoration: none;
 }
 header nav a:hover{
     color: rgb(207, 204, 204);
